# django-aws-pany

./: README.md  docker-compose.yml
app/: Dockerfile  install-packages.sh  pyproject.toml  requirements.txt  run-gunicorn.sh
app/hello_django/: settings.py  storage_backends.py
app/upload/: views.py
app/upload/migrations/: 0001_initial.py  0002_uploadprivate_alter_upload_file.py
