[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.80"
Django = "^4.1.1"
django-storages = "^1.13.1"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
